# fast_zero

./: pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
helper/: comando uvicorn.txt
migrations/: env.py
migrations/versions/: 4eaea21a881e_create_todos_table.py  9eb75484b6de_exercicio_02_aula_04.py  f9839853d56d_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
